<resources>
    <string name="app_name">Education Absence App</string>
    <string name="app_title">Education Absence App</string>
    <string name="create_account">Create New Account</string>
    <string name="full_name" translatable="false">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reg_btn">Register</string>
    <string name="already_registered">Already registered? Login here</string>
    <string name="need_to_register">Need an account? Register here</string>
    <string name="register_text">Need an account? Register here</string>
    <string name="login_btn">Login</string>
    <string name="logout_btn">Logout</string>
    <string name="send_mail_btn">Send Mail</string>
</resources>
